# DyLLM_tpu

./: README.md  pyproject.toml  run.py  setup.py  setup_env.sh
dyllm/: config.py  dllm.py  sampling_params.py
dyllm/configs/: __init__.py  dream.py  llada.py
dyllm/csrc/attention/: attention.cpp  attention_ops_kernels.cu  common.h  cutlass_kernel.cu  cutlass_mma.h
dyllm/csrc/cache/: cache.cpp  cache_kernels.cu
dyllm/csrc/custom_ops/: custom_ops.cpp  layernorm_kernel.cu  pos_encoding_kernel.cu
dyllm/engine/: cache_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
dyllm/eval/: adapter.py  eval.py
dyllm/model_executor/layers/: activations.py  attention.py  embed_head.py  layernorm.py  linear.py  mlp_cache_manage.py  rotary_embedding.py  sampler.py
dyllm/model_executor/models/: __init__.py  dream.py  llada.py
dyllm/tests/: flash_attention.py  test_attention_tpu.py
dyllm/tpu/: __init__.py  collectives.py  custom_ops.py
dyllm/utils/: context.py  metadata.py  util.py  weight_loader.py
