[build-system]
requires = ["setuptools", "wheel", "torch>=2.9.0,<2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "dyllm"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]

dependencies = [
    "transformers==4.57.6",
    "accelerate>=1.12.0",
    "numpy>=2.1.2",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "datasets>=3.6.0",
    "tqdm>=4.67.1",
    "einops>=0.8.1",
    "pillow>=11.3.0"
]

[tool.black]
line-length = 120